# github-previews

./: README.md  github-previews.cabal  stack.yaml
src/GitHub/: Previews.hs
src/GitHub/Previews/: Auth.hs  Data.hs
src/GitHub/Previews/Data/: Apps.hs  CheckRuns.hs  CheckSuites.hs  Request.hs  Webhooks.hs
src/GitHub/Previews/Endpoints/: Apps.hs
src/GitHub/Previews/Endpoints/Checks/: CheckRuns.hs
