name:                github-previews
version:             0.1.0.0
synopsis:            Library for GitHub API previews
description:         Support for <https://developer.github.com/v3/previews/ API
                     previews> from the GitHub REST API v3. API previews are
                     not stable and may change without notice during the review
                     period.
                     .
                     This library is intended to complement the
                     <http://hackage.haskell.org/package/github github>
                     library. As the API previews are promoted to the official
                     GitHub API they should be moved to the github library.
homepage:            https://github.com/robbiemcmichael/github-previews
license:             BSD3
license-file:        LICENSE
author:              Robbie McMichael
maintainer:          Robbie McMichael
copyright:           2019 Robbie McMichael
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  build-depends:
      base   >= 4.7  && < 5
    , github >= 0.20 && < 0.21

  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    OverloadedStrings
    ScopedTypeVariables

  exposed-modules:
    GitHub.Previews

source-repository head
  type:     git
  location: https://github.com/robbiemcmichael/github-previews
