name:                github-previews
version:             0.1.0.0
synopsis:            Library for GitHub API previews
description:         Support for <https://developer.github.com/v3/previews/ API
                     previews> from the GitHub REST API v3. API previews are
                     not stable and may change without notice during the review
                     period.
                     .
                     This library is intended to complement the
                     <http://hackage.haskell.org/package/github github>
                     library. As the API previews are promoted to the official
                     GitHub API they should be moved to the github library.
homepage:            https://github.com/robbiemcmichael/github-previews
license:             BSD3
license-file:        LICENSE
author:              Robbie McMichael
maintainer:          Robbie McMichael
copyright:           2019 Robbie McMichael
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  build-depends:
      base        >= 4.7      && < 5
    , aeson       >= 1.4.0.0  && < 1.5
    , bytestring  >= 0.10.4.0 && < 0.11
    , github      >= 0.21     && < 0.22
    , http-client >= 0.5.12   && < 0.7
    , mtl         >= 2.1.3.1  && < 2.2  || >= 2.2.1 && < 2.3
    , tagged
    , text        >= 1.2.0.6  && < 1.3

  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    OverloadedStrings
    ScopedTypeVariables

  exposed-modules:
    GitHub.Previews
    GitHub.Previews.Auth
    GitHub.Previews.Data
    GitHub.Previews.Data.Apps
    GitHub.Previews.Data.CheckRuns
    GitHub.Previews.Data.CheckSuites
    GitHub.Previews.Data.Webhooks
    GitHub.Previews.Endpoints.Apps
    GitHub.Previews.Endpoints.Checks.CheckRuns

source-repository head
  type:     git
  location: https://github.com/robbiemcmichael/github-previews
